# trivialsec-trivialscan-queue-consumer

./: .env  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  queue-consumer.code-workspace  requirements-dev.txt
.development/: invoke-payload.json
.local/: invoke-payload.json  report-full.json  report-summary.json  report.json
plans/: Dev-backend.conf  Prod-backend.conf  _locals.tf  _secrets.tf  _vars.tf  iam.tf  lambda.tf  outputs.tf  parameters.tf  remotes.tf
src/: app.py  internals.py  models.py  run.py
src/services/: aws.py  sendgrid.py  webhook.py
